Interim commit of PF sanitise and escape function.